error2.log

> rest-express@1.0.0 dev
> cross-env NODE_ENV=development tsx server/index.ts

D:\Ahmed\Business\final\Air-Bliss-Store\shared\routes.ts:2
import { insertProductSchema, insertOrderSchema, insertOrderItemSchema, products, orders, orderItems } from './schema';
         ^

SyntaxError: The requested module './schema' does not provide an export named 'insertProductSchema'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:363:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:669:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.6.0
